<!--
  ~ Created by Evgeniya Zemlyanaya (@zzemlyanaya)
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 09.07.2021, 15:11
  -->

<resources>
    <string name="app_name" translatable="false">TFood</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="component_in_progress">Component is in process, but we are working on it!</string>
    <string name="server_error">Something wrong with the server. Please try again later</string>
    <string name="press_back_to_exit">Please click BACK again to exit</string>
    <string name="computing">Computing…</string>
    <string name="got_it">Got it</string>

    <string name="email_prompt" translatable="false">Email</string>
    <string name="password_prompt">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="no_account">Have no account yet?</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password is too short</string>
    <string name="auth_error">Unsuccessful login. Please, check your data</string>
    <string name="sign_up_title">Create new account</string>
    <string name="sign_up_button">Create</string>

    <string name="item_home">Home</string>
    <string name="item_dairy">Dairy</string>
    <string name="item_statistic">Statistic</string>
    <string name="item_profile">Profile</string>

    <string name="hello_name">Hi there!✋\nWhat\'s your username?</string>
    <string name="name_prompt">Enter your name</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="short_name">Name should be at least 4 chars</string>
    <string name="next">Next</string>
    <string name="gender">Choose your gender</string>
    <string name="man">Male 🧑</string>
    <string name="woman">Female 👩</string>
    <string name="birthday">Your birthday 🧍</string>
    <string name="age">Age</string>

    <string name="dd">dd</string>
    <string name="mm">mm</string>
    <string name="yyyy">yyyy</string>
    <string name="date_error">Impossible date</string>
    <string name="age_error">We are sorry, but our app is for teenagers only</string>
    <string name="num" translatable="false">00</string>
    <string name="done">Done</string>
    <string name="hmm">Hmmm…</string>
    <string name="basic_quiz_not_complete">It seems like some data are absent or invalid. Please, check your data and try again</string>

    <string name="height_with_emoji">Height 📏</string>
    <string name="height">Height</string>
    <string name="generic_error">Invalid data. Are you sure?</string>
    <string name="weight_with_emoji">Weight ⚖</string>
    <string name="weight">Weight</string>
    <string name="breast_diametr">Breast diameter</string>
    <string name="sm">sm</string>
    <string name="kg">kg</string>
    <string name="how_to_height">How to know your height?</string>
    <string name="how_to_weight">How to know your weight?</string>
    <string name="how_to_breast">How to know your breast diameter?</string>

    <string name="kcal_now">Your calories intake now:</string>
    <string name="kcal_ideal">Your ideal calories intake:</string>
    <string name="water_norm">Water intake:</string>

    <string name="kcal">kcal</string>
    <string name="gram">gram</string>
    <string name="goal">Goal 🎯</string>
    <string name="eaten">Eaten 🍽</string>
    <string name="burnt">Burnt 🔥</string>
    <string name="kcal_left">Left:</string>
    <string name="prots">Proteins</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="ml">ml</string>

    <string name="sleep_title">Sleep</string>
    <string name="sleep_with_emoji">Sleep 🌙</string>
    <string name="good_sleep">👍 good sleep</string>
    <string name="bad_sleep">😴 don\'t you want to sleep more?</string>
    <string name="sleep_prompt">Set the time you fell asleep and woke up today</string>
    <string name="hours_short">h</string>
    <string name="minutes_short">min</string>
    <string name="sleep_data">We need this data to\ncalculate daily energy demands</string>

    <string name="level">Level</string>
    <string name="weight_res_title">Your body state</string>
    <string name="weight_norm_less">Below normal</string>
    <string name="weight_norm">Normal</string>
    <string name="weight_norm_more">Above normal</string>
    <string name="ideal_kcal">Recommended daily caloric value 🥑</string>
    <string name="ideal_water">Recommended water consumption</string>
    <string name="weight_val_less">Minimal requisite body mass:</string>
    <string name="weight_val_norm">Congrats, your body mass is OK!</string>
    <string name="weight_val_more">Maximum admissible body mass:</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="sport">Sport</string>
    <string name="chores">Chores</string>
    <string name="empty_dairy">Nothing is added yet</string>
    <string name="tap_here">Tap here to add sth new</string>
    <string name="rate_day">How do feel?</string>

    <string name="norm">Norm</string>
    <string name="completed">Completed</string>
    <string name="kcal_title">Kilocalories 🍎</string>
    <string name="water_title">Water</string>
    <string name="nutrients">Nutrients</string>
    <string name="water_with_emoji">Water 💧</string>
    <string name="recommended_kcal">Recommended caloric value: </string>

    <string name="achievements">Achievements</string>
    <string name="shop">Shop</string>
    <string name="recommendations">Recommendations</string>
    <string name="settings">Settings</string>
    <string name="about_app">About app</string>
    <string name="month_short">m.</string>
    <string name="years_short">y.</string>

    <string name="logout">Logout</string>
    <string name="account_settings">Account settings</string>
    <string name="notif_settings">Notifications</string>
    <string name="name">Name</string>
    <string name="delete_account">Delete account</string>

    <string name="add">Add</string>
    <string name="gram_short">gr</string>
    <string name="fiber">Alimentary fiber</string>
    <string name="vitamins">Vitamins</string>
    <string name="minerals">Minerals</string>

    <string name="search">Search</string>
    <string name="add_new_product">Add new product</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="min_short">min</string>
    <string name="mgram_short">mg</string>

    <string name="congrats">Congrats!👍</string>
    <string name="congrats_full">Congratulations!👍</string>
    <string name="well_done">Well done!👍</string>
    <string name="god_job">Good job!👍</string>
    <string name="awesome">Awesome!👍</string>
    <string name="great">Great!👍</string>
    <string name="there">You\'re almost there!👍</string>
    <string-array name="congrats_array">
        <item>@string/congrats</item>
        <item>@string/congrats_full</item>
        <item>@string/well_done</item>
        <item>@string/god_job</item>
        <item>@string/awesome</item>
        <item>@string/great</item>
        <item>@string/there</item>
    </string-array>
    <string name="water_goal_reached">You\'ve reached daily water goal!</string>
    <string name="macro_goal_two">You\'ve reached daily goal on %1$s and %2$s, but don\'t forget about other nutrients!</string>
    <string name="diet_goal_reached">You\'ve reached all daily diet goal!</string>
    <string name="and">and</string>
    <string name="not_forget">but don\'t forget about other goals!</string>
    <string name="contin">Continue</string>
    <string name="macro_goal_one">You\'ve reached daily goal on %1$s!</string>
    <string name="carbs_goal">carbs</string>
    <string name="prots_goal">proteins</string>
    <string name="fats_goal">fats</string>

    <string name="articles">Articles</string>
    <string name="more">More</string>
    <string name="games">Games</string>
</resources>