<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Evgeniya Zemlyanaya (@zzemlyanaya)
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 11.01.2021, 12:44
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.basicquiz.GenderFragment">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/butMan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/textFieldColour"
            android:elevation="0dp"
            android:fontFamily="@font/montserrat_semibold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/man"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:backgroundTint="@color/textFieldColour"
            app:cornerRadius="15dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/butWoman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/textFieldColour"
            android:elevation="0dp"
            android:fontFamily="@font/montserrat_semibold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/woman"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:backgroundTint="@color/textFieldColour"
            app:cornerRadius="15dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/butMan"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/butMan"
            app:layout_constraintTop_toBottomOf="@+id/butMan" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/gender"
            android:textSize="25sp"
            app:autoSizeMaxTextSize="25sp"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>