<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Evgeniya Zemlyanaya (@zzemlyanaya)
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 15.01.2021, 14:12
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.BasicResultFragment">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/kcal_now"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/kcal_ideal"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textKcalNow"
            app:layout_constraintTop_toBottomOf="@+id/textKcalNow" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/water_norm"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textKcalIdeal"
            app:layout_constraintTop_toBottomOf="@+id/textKcalIdeal" />

        <TextView
            android:id="@+id/textKcalNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="2500"
            android:textColor="@color/primaryColour"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textKcalIdeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="1800"
            android:textColor="@color/primaryColour"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textKcalIdeal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="3"
            android:textColor="@color/primaryColour"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>